--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,20 @@
     <string name="app_name">RepositoryG</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label">First Activity</string>
+    <string name="second_fragment_label">Second Activity</string>
+    <string name="next">Go to 2-nd</string>
+    <string name="previous">Back</string>
+    <string name="save">Save</string>
+    <string name="read_preferences">Read Preferences</string>
+    <string name="inputText">Your text:</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string-array name="themes">
+        <item>Default</item>
+        <item>Dark</item>
+        <item>Light</item>
+    </string-array>
+
+    <string name="hello_first_fragment">1-st Activity</string>
+    <string name="hello_second_fragment">2-nd Activity</string>
 </resources>
